fixed bug of dropdown getting stuck after resize

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ div#about-text{
     font-family: 'Lato', sans-serif;
     font-size: 1.25rem;
     margin-top: 40px;
-    max-width: 400px;
+    max-width: 450px;
 }
 @media (max-width: 320px){
     div#about-text{
